@@ -1,3 +1,8 @@
+2006-11-27  Thomas Wood  <thos@gnome.org>
+
+	* gnome-theme-installer.c: (file_theme_type): Applied patch from bug
+	378680 (leak in file_theme_type() in theme-switcher)
+
 2006-10-27  Thomas Wood  <thos@gnome.org>
 
 	* gnome-theme-installer.c: (transfer_done_cb): Hopefully fix bug
